// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusIndicator Component Snapshots should match snapshot for error status 1`] = `
<div
  aria-label="Status: Error"
  class="inline-flex items-center gap-2 "
  role="status"
>
  <div
    class="h-4 w-4 text-red-700 dark:text-red-300 flex-shrink-0"
  >
    <svg
      aria-hidden="true"
      class="w-full h-full"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M6 18L18 6M6 6l12 12"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
  </div>
</div>
`;

exports[`StatusIndicator Component Snapshots should match snapshot for info status 1`] = `
<div
  aria-label="Status: Info"
  class="inline-flex items-center gap-2 "
  role="status"
>
  <div
    class="h-4 w-4 text-blue-700 dark:text-blue-300 flex-shrink-0"
  >
    <svg
      aria-hidden="true"
      class="w-full h-full"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
  </div>
</div>
`;

exports[`StatusIndicator Component Snapshots should match snapshot for neutral status 1`] = `
<div
  aria-label="Status: Neutral"
  class="inline-flex items-center gap-2 "
  role="status"
>
  <div
    class="h-4 w-4 text-gray-700 dark:text-gray-300 flex-shrink-0"
  >
    <svg
      aria-hidden="true"
      class="w-full h-full"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M8 12h.01M12 12h.01M16 12h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
  </div>
</div>
`;

exports[`StatusIndicator Component Snapshots should match snapshot for success status 1`] = `
<div
  aria-label="Status: Success"
  class="inline-flex items-center gap-2 "
  role="status"
>
  <div
    class="h-4 w-4 text-green-700 dark:text-green-300 flex-shrink-0"
  >
    <svg
      aria-hidden="true"
      class="w-full h-full"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M5 13l4 4L19 7"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
  </div>
</div>
`;

exports[`StatusIndicator Component Snapshots should match snapshot for warning status 1`] = `
<div
  aria-label="Status: Warning"
  class="inline-flex items-center gap-2 "
  role="status"
>
  <div
    class="h-4 w-4 text-yellow-700 dark:text-yellow-300 flex-shrink-0"
  >
    <svg
      aria-hidden="true"
      class="w-full h-full"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-2.5L13.732 4.5c-.77-.833-2.694-.833-3.464 0L3.34 16.5c-.77.833.192 2.5 1.732 2.5z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
  </div>
</div>
`;

exports[`StatusIndicator Component Snapshots should match snapshot with custom className 1`] = `
<div
  aria-label="Status: Warning"
  class="inline-flex items-center gap-2 custom-indicator"
  role="status"
>
  <div
    class="h-4 w-4 text-yellow-700 dark:text-yellow-300 flex-shrink-0"
  >
    <svg
      aria-hidden="true"
      class="w-full h-full"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-2.5L13.732 4.5c-.77-.833-2.694-.833-3.464 0L3.34 16.5c-.77.833.192 2.5 1.732 2.5z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
  </div>
</div>
`;

exports[`StatusIndicator Component Snapshots should match snapshot with large size 1`] = `
<div
  aria-label="Status: Error"
  class="inline-flex items-center gap-2.5 "
  role="status"
>
  <div
    class="h-5 w-5 text-red-700 dark:text-red-300 flex-shrink-0"
  >
    <svg
      aria-hidden="true"
      class="w-full h-full"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M6 18L18 6M6 6l12 12"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
  </div>
</div>
`;

exports[`StatusIndicator Component Snapshots should match snapshot with pulse animation 1`] = `
<div
  aria-label="Status: Info"
  class="inline-flex items-center gap-2 "
  role="status"
>
  <div
    class="h-4 w-4 text-blue-700 dark:text-blue-300 flex-shrink-0"
  >
    <svg
      aria-hidden="true"
      class="w-full h-full"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
  </div>
</div>
`;

exports[`StatusIndicator Component Snapshots should match snapshot with small size 1`] = `
<div
  aria-label="Status: Success"
  class="inline-flex items-center gap-1.5 "
  role="status"
>
  <div
    class="h-3.5 w-3.5 text-green-700 dark:text-green-300 flex-shrink-0"
  >
    <svg
      aria-hidden="true"
      class="w-full h-full"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M5 13l4 4L19 7"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
  </div>
</div>
`;

exports[`StatusIndicator Component Snapshots should match snapshot with text label 1`] = `
<div
  aria-label="Status: Operation Complete"
  class="inline-flex items-center gap-2 "
  role="status"
>
  <div
    class="h-4 w-4 text-green-700 dark:text-green-300 flex-shrink-0"
  >
    <svg
      aria-hidden="true"
      class="w-full h-full"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M5 13l4 4L19 7"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
  </div>
  <span
    class="text-sm font-medium text-green-700 dark:text-green-300"
  >
    Operation Complete
  </span>
</div>
`;
